# atus-pro

./: CMakeLists.txt  Doxyfile  INSTALL_OPTIONS.txt  README.txt  install  install_8.4.1  install_8.5.0  install_8.5.1
dox/: building_atus_pro.dox  crank_nicholson.dox  install_linux.dox  mainpage.dox  my.bib  my_newton_alg.dox  my_newton_alg_cs.dox  params.dox  tested_platforms.dox
include/: CBase.h  CBase_no_mpi.h  MyParameterHandler.h  breed_ortho_funcs.h  config.h  ef.h  eigenfunctions_AiryAi.h  eigenfunctions_HO.h  eigenfunctions_Polar_HO.h  functions.h  functions_1.h  functions_cs.h  my_table.h  ref_pt_list.h  strtk.hpp  tinyxml2.h
modulefiles/: deal.ii-8.4.1  gsl-2.2.1  openmpi-2.0.1  p4est-1.1  petsc-3.6.3
src/: CMakeLists.txt  MyParameterHandler.cpp  breed.cpp  breed_1.cpp  breed_cs.cpp  breed_sob.cpp  breed_sob_1.cpp  breedc.cpp  gen_params.cpp  gen_params_cs.cpp  my_table.cpp  rtprop.cpp  rtprop_1.cpp  rtprop_cs.cpp  tinyxml2.cpp
